# freetype

include/freetype/config/: ftconfig.h
windows/: CMakeLists.txt
